k8s/kustomize/infra/base/gateway/frontend-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-httproute
  labels:
    app.kubernetes.io/part-of: streamforge-infra
    app.kubernetes.io/component: gateway
spec:
  parentRefs:
    - name: streamforge-gateway
      namespace: streamforge-infra-dev
      sectionName: https-listener
  hostnames:
    - "sudheer.fun"
    - "*.sudheer.fun"
  rules:
    - backendRefs:
        - name: sf-frontend-svc
          port: 80
